--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,6 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media(max-width: 720px) {
+    flex-direction: column;
+    justify-content: stretch;
+  }
 }
 
 .button,
@@ -18,13 +23,33 @@ button.button {
 // HERO
 .button--hero {
   @include button-hero;
+  padding: 30px 60px;
+  text-align: center;
   
   color: $wash;
+
+  @media(max-width: 850px) {
+    padding: 20px 40px;
+  }
+
+  @media(max-width: 720px) {
+    padding: 20px 0;
+    width: 100%;
+  }
 }
 
 .button--hero:nth-child(1) {
   background: $secondary;
   margin-right: 50px;
+
+  @media(max-width: 960px) {
+    margin-right: 30px;
+  }
+
+  @media(max-width: 720px) {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 
   &:hover,
   &:active {
