--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -1,7 +1,23 @@
 .hero {
   margin: 50px 0 200px;
+
+  @media(max-width: 768px) {
+    margin: 50px 0;
+  }
+
+  @media(max-width: 630px) {
+    margin: 30px 0;
+  }
 }
 
 .hero__image{
   margin-bottom: 50px;
+
+  @media(max-width: 768px) {
+    margin-bottom: 30px;
+  }
+
+  @media(max-width: 630px) {
+    margin-bottom: 20px;
+  }
 }
