--- a/style.css
+++ b/style.css
@@ -8,9 +8,27 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background: url(./images/jpg/body_pc.jpg);
+  background: url(./images/jpg/body_desktop.jpg);
   background-attachment: fixed;
-  background-size: cover;
+  background-size: contain;
+  background-position: center;
+  background-repeat: repeat-y;
+}
+@media (min-width: 1370px) {
+  body {
+    background-size: cover;
+  }
+}
+@media (max-width: 1040px) {
+  body {
+    background: url(./images/jpg/body_tablet.jpg);
+    background-size: contain;
+  }
+}
+@media (max-width: 630px) {
+  body {
+    background: url(./images/jpg/body_smartphone.jpg);
+  }
 }
 
 a {
@@ -31,6 +49,23 @@ ul {
   max-width: 1140px;
   width: 100%;
   margin: 0 auto;
+  padding: 0 100px;
+}
+@media (max-width: 768px) {
+  .container {
+    max-width: 568px;
+    padding: 0;
+  }
+}
+@media (max-width: 720px) {
+  .container {
+    padding: 0 50px;
+  }
+}
+@media (max-width: 630px) {
+  .container {
+    padding: 0 30px;
+  }
 }
 
 .background-main {
@@ -77,10 +112,20 @@ ul {
   color: #4F4F4F;
 }
 
+.display-none {
+  display: none;
+}
+
 .button-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media (max-width: 720px) {
+  .button-wrapper {
+    flex-direction: column;
+    justify-content: stretch;
+  }
 }
 
 .button,
@@ -101,12 +146,46 @@ button.button {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
+  padding: 30px 60px;
+  text-align: center;
   color: #FFF;
+}
+@media (max-width: 780px) {
+  .button--hero {
+    font-size: 14px;
+  }
+}
+@media (max-width: 375px) {
+  .button--hero {
+    font-size: 12px;
+  }
+}
+@media (max-width: 850px) {
+  .button--hero {
+    padding: 20px 40px;
+  }
+}
+@media (max-width: 720px) {
+  .button--hero {
+    padding: 20px 0;
+    width: 100%;
+  }
 }
 
 .button--hero:nth-child(1) {
   background: #166FB0;
   margin-right: 50px;
+}
+@media (max-width: 960px) {
+  .button--hero:nth-child(1) {
+    margin-right: 30px;
+  }
+}
+@media (max-width: 720px) {
+  .button--hero:nth-child(1) {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 }
 .button--hero:nth-child(1):hover, .button--hero:nth-child(1):active {
   background: #FFF;
@@ -208,9 +287,29 @@ button.button {
 .hero {
   margin: 50px 0 200px;
 }
+@media (max-width: 768px) {
+  .hero {
+    margin: 50px 0;
+  }
+}
+@media (max-width: 630px) {
+  .hero {
+    margin: 30px 0;
+  }
+}
 
 .hero__image {
   margin-bottom: 50px;
+}
+@media (max-width: 768px) {
+  .hero__image {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 630px) {
+  .hero__image {
+    margin-bottom: 20px;
+  }
 }
 
 .intro {
