--- a/scss/_layouts.scss
+++ b/scss/_layouts.scss
@@ -2,18 +2,32 @@
   max-width: 1140px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 100px;
+
+  @media(max-width: 1510px) {
+    max-width: 980px;
+  }
+
+  @media(max-width: 1200px) {
+    max-width: 620px;
+  }
 
   @media(max-width: 768px) {
-    max-width: 568px;
-    padding: 0;
+    max-width: 530px;
+    padding: 0 15px;
+  }
+}
+
+.container-hero {
+  max-width: 1140px;
+  width: 100%;
+  margin: 0 auto;
+
+  @media(max-width: 1140px) {
+    max-width: 920px;
   }
 
-  @media(max-width: 720px) {
-    padding: 0 50px;
-  }
-
-  @media(max-width: 630px) {
-    padding: 0 30px;
+  @media(max-width: 768px) {
+    max-width: 530px;
+    padding: 0 15px;
   }
 }
