--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -4,6 +4,10 @@
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
+
+  @media(max-width: 590px) {
+    font-size: 12px;
+  }
 }
 
 @mixin button-hero {
@@ -27,6 +31,10 @@
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 700;
+
+  @media(max-width: 768px) {
+    font-size: 12px;
+  }
 }
 
 // EXHIBITORS
@@ -47,6 +55,14 @@
   letter-spacing: 1px;
   font-weight: 700;
   text-align: center;
+
+  @media(max-width: 768px) {
+    font-size: 32px
+  }
+
+  @media(max-width: 590px) {
+    font-size: 24px
+  }
 }
 
 @mixin sub {
@@ -54,6 +70,14 @@
   letter-spacing: 1px;
   font-weight: 700;
   text-align: center;
+
+  @media(max-width: 1200px) {
+    font-size: 22px;
+  }
+
+  @media(max-width: 590px) {
+    font-size: 18px;
+  }
 }
 
 @mixin body {
