--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -3,7 +3,9 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 30px;
 
-  margin-bottom: 200px;
+  @media(max-width: 1200px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .card {
@@ -14,6 +16,10 @@
 
 .card__header {
   padding: 30px 0;
+
+  @media(max-width: 1200px) {
+    padding: 20px 0;
+  }
 }
 
 .card__title {
@@ -22,11 +28,56 @@
 
 .card__content {
   padding: 20px;
+
+  @media(max-width: 1200px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    align-items: center;
+  }
+
+  @media(max-width: 590px) {
+    padding: 15px;
+    grid-gap: 15px;
+  }
+
+  @media(max-width: 530px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .card__description {
   @include body;
 
   text-align: center;
-  margin-bottom: 20px;  
+  margin-bottom: 20px;
+
+  @media(max-width: 1200px) {
+    order: 1;
+    text-align: left;
+    font-size: 14px;
+  }
+
+  @media(max-width: 530px) {
+    order: 0;
+  }
+
+  @media(max-width: 530px) {
+    margin-bottom: 0;
+    text-align: center;
+  }
+}
+
+.card__image {
+  object-fit: cover;
+
+  @media(max-width: 1200px) {
+    order: 0;
+    height: 100%;
+  }
+
+  @media(max-width: 530px) {
+    height: initial;
+    order: 1;
+  }
 }
