--- a/scss/sections/_exhibitors-councils.scss
+++ b/scss/sections/_exhibitors-councils.scss
@@ -1,6 +1,14 @@
 .exhibitors-councils-wrapper {
-  padding: 100px 0;
+  padding: 50px 0 100px;
   background: rgba(255, 255, 255, 0.1);
+
+  @media(max-width: 768px) {
+    padding: 30px 0 50px;
+  }
+
+  @media(max-width: 520px) {
+    padding: 20px 0 30px;
+  }
 }
 
 .exhibitors-councils__title {
@@ -15,6 +23,10 @@
 
 .exhibitors-councils__companies-wrapper {
   padding: 50px 0;
+
+  @media(max-width: 520px) {
+    padding: 30px 0;
+  }
 }
 
 .exhibitors-councils__companies__title {
@@ -22,16 +34,33 @@
 
   text-align: center;
   margin-bottom: 50px;
+
+  @media(max-width: 520px) {
+    margin-bottom: 30px;
+  }
 }
 
 .exhibitors-councils__companies {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 30px;
+
+  @media(max-width: 768px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media(max-width: 590px) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+  }
 }
 
 .councils__companies {
   grid-template-columns: repeat(3, 1fr);
+
+  @media(max-width: 768px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 
@@ -52,6 +81,14 @@
   object-fit: contain;
   margin-bottom: 10px;
   height: 100px;
+
+  @media(max-width: 1200px) {
+    height: 80px;
+  }
+
+  @media(max-width: 375px) {
+    height: 60px;
+  }
 }
 
 .exhibitors-councils__company__name {
