--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -2,11 +2,11 @@
   margin: 50px 0 200px;
 
   @media(max-width: 768px) {
-    margin: 50px 0;
+    margin: 50px 0 100px;
   }
 
   @media(max-width: 630px) {
-    margin: 30px 0;
+    margin: 50px 0;
   }
 }
 
