--- a/scss/sections/_intro.scss
+++ b/scss/sections/_intro.scss
@@ -1,11 +1,23 @@
 .intro {
   margin-bottom: 200px;
+
+  @media(max-width: 768px) {
+    margin-bottom: 100px;
+  }
+
+  @media(max-width: 630px) {
+    margin-bottom: 50px;
+  }
 }
 
 .intro__title {
   @include h2;
 
   margin-bottom: 30px;
+
+  @media(max-width: 590px) {
+    margin-bottom: 20px;
+  }
 }
 
 .intro__description {
@@ -15,4 +27,14 @@
   width: 554px;
   margin: 0 auto;
   margin-bottom: 50px;
+
+  @media(max-width: 768px) {
+    margin-bottom: 30px;
+    width: 100%;
+  }
+
+  @media(max-width: 590px) {
+    font-size: 14px;
+    margin-bottom: 15px;
+  }
 }
