--- a/scss/sections/_performer.scss
+++ b/scss/sections/_performer.scss
@@ -1,5 +1,13 @@
 .performer {
   margin-bottom: 100px;
+
+  @media(max-width: 768px) {
+    margin-bottom: 100px;
+  }
+
+  @media(max-width: 630px) {
+    margin-bottom: 50px;
+  }
 }
 
 .performer__title {
@@ -15,11 +23,18 @@
 .pagination {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  margin-top: 50px;
+  margin: 50px 0;
   box-shadow: $shadow;
   border-radius: 5px;
   overflow: hidden;
-  margin-bottom: 50px;
+
+  @media(max-width: 768px) {
+    margin: 30px 0;
+  }
+
+  @media(max-width: 520px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .pagination__page {
@@ -43,12 +58,33 @@
     background: $secondary;
     color: $wash;
   }
+
+  @media(max-width: 520px) {
+    &:last-of-type {
+      grid-column: span 3;
+      border-top: 1px solid $dirty;
+    }
+  
+    &:nth-child(1),
+    &:nth-child(2),
+    &:nth-child(3) {
+      border-bottom: 1px solid $dirty;
+    }
+  }
 }
 
 .streamers {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 30px;
+
+  @media(max-width: 1200px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media(max-width: 520px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .streamer__img {
