--- a/scss/sections/_stream.scss
+++ b/scss/sections/_stream.scss
@@ -1,19 +1,54 @@
 .stream {
   margin-bottom: 200px;
+
+  @media(max-width: 768px) {
+    margin-bottom: 100px;
+  }
+
+  @media(max-width: 630px) {
+    margin-bottom: 50px;
+  }
 }
 
 .stream__title {
   @include h2;
 
   margin-bottom: 30px;
+
+  @media(max-width: 590px) {
+    margin-bottom: 20px;
+  }
 }
 
 .stream__sub {
   @include sub;
 
   margin-bottom: 50px;
+
+  @media(max-width: 720px) {
+    margin-bottom: 30px;
+  }
 }
 
 .stream__video {
   text-align: center;
+
+  @media(max-width: 1200px) {
+    iframe {
+      width: 100%;
+      height: 450px;
+    }
+  }
+
+  @media(max-width: 590px) {
+    iframe {
+      height: 350px;
+    }
+  }
+
+  @media(max-width: 375px) {
+    iframe {
+      height: 250px;
+    }
+  }
 }
