--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,3 +15,4 @@
 @import "sections/performer";
 @import "sections/exhibitors-councils";
 @import "sections/footer";
+@import "sections/exhibitors-page";
