--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 // COMPONENTS
 @import "components/buttons";
 @import "components/card";
+@import "components/pagination";
 
 // SECTIONS
 @import "sections/hero";
