--- a/style.css
+++ b/style.css
@@ -414,6 +414,69 @@ button.button {
   }
 }
 
+.pagination {
+  display: grid;
+  margin: 50px 0;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.pagination__page {
+  transition: 200ms all ease-in-out;
+  background: #FFF;
+  padding: 30px 0;
+  text-align: center;
+  color: #166FB0;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+}
+.pagination__page ~ .pagination__page {
+  border-left: 1px solid #F9F9F9;
+}
+.pagination__page:hover, .pagination__page:active {
+  background: #F9F9F9;
+}
+.pagination__page.active {
+  background: #166FB0;
+  color: #FFF;
+}
+@media (max-width: 768px) {
+  .pagination__page {
+    font-size: 12px;
+  }
+}
+
+.pagination--performer {
+  grid-template-columns: repeat(7, 1fr);
+}
+@media (max-width: 768px) {
+  .pagination--performer {
+    margin: 30px 0;
+  }
+}
+@media (max-width: 520px) {
+  .pagination--performer {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 520px) {
+  .pagination__page--performer:last-of-type {
+    grid-column: span 3;
+    border-top: 1px solid #F9F9F9;
+  }
+  .pagination__page--performer:nth-child(1), .pagination__page--performer:nth-child(2), .pagination__page--performer:nth-child(3) {
+    border-bottom: 1px solid #F9F9F9;
+  }
+}
+
+.pagination--exhibitors {
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .hero {
   margin: 50px 0 200px;
 }
@@ -627,61 +690,6 @@ button.button {
 @media (max-width: 590px) {
   .performer__sub {
     font-size: 18px;
-  }
-}
-
-.pagination {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  margin: 50px 0;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
-  border-radius: 5px;
-  overflow: hidden;
-}
-@media (max-width: 768px) {
-  .pagination {
-    margin: 30px 0;
-  }
-}
-@media (max-width: 520px) {
-  .pagination {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-.pagination__page {
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: 700;
-  transition: 200ms all ease-in-out;
-  background: #FFF;
-  padding: 30px 0;
-  text-align: center;
-  color: #166FB0;
-}
-@media (max-width: 768px) {
-  .pagination__page {
-    font-size: 12px;
-  }
-}
-.pagination__page ~ .pagination__page {
-  border-left: 1px solid #F9F9F9;
-}
-.pagination__page:hover, .pagination__page:active {
-  background: #F9F9F9;
-}
-.pagination__page.active {
-  background: #166FB0;
-  color: #FFF;
-}
-@media (max-width: 520px) {
-  .pagination__page:last-of-type {
-    grid-column: span 3;
-    border-top: 1px solid #F9F9F9;
-  }
-  .pagination__page:nth-child(1), .pagination__page:nth-child(2), .pagination__page:nth-child(3) {
-    border-bottom: 1px solid #F9F9F9;
   }
 }
 
@@ -1003,43 +1011,6 @@ button.button {
   .exhibitors-page__title {
     font-size: 24px;
   }
-}
-
-.pagination-exhibitors {
-  display: flex;
-  grid-template-columns: repeat(7, 1fr);
-  margin: 50px 0 100px;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-.pagination-exhibitors__page {
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: 700;
-  transition: 200ms all ease-in-out;
-  flex: 1;
-  background: #FFF;
-  padding: 30px 0;
-  text-align: center;
-  color: #166FB0;
-}
-@media (max-width: 768px) {
-  .pagination-exhibitors__page {
-    font-size: 12px;
-  }
-}
-.pagination-exhibitors__page:nth-child(1) {
-  border-right: 1px solid #F9F9F9;
-}
-.pagination-exhibitors__page:hover, .pagination-exhibitors__page:active {
-  background: #F9F9F9;
-}
-.pagination-exhibitors__page.active {
-  background: #166FB0;
-  color: #FFF;
 }
 
 .exhibitors-page__sub {
