--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
 
-  @media(max-width: 720px) {
+  @media(max-width: 768px) {
     flex-direction: column;
     justify-content: stretch;
   }
@@ -36,7 +36,7 @@ button.button {
     padding: 20px 40px;
   }
 
-  @media(max-width: 720px) {
+  @media(max-width: 768px) {
     padding: 20px 0;
     width: 100%;
   }
@@ -50,7 +50,7 @@ button.button {
     margin-right: 30px;
   }
 
-  @media(max-width: 720px) {
+  @media(max-width: 768px) {
     margin-right: 0;
     margin-bottom: 20px;
   }
@@ -135,5 +135,28 @@ button.button {
     background: $wash;
     color: $secondary;
     border: 2px solid $secondary
+  }
+}
+
+// EXHIBITOR CARD
+.button--exhibitor__card {
+  @include transition;
+
+  cursor: pointer;
+  background: $main;
+  color: $wash;
+  margin-top: 30px; 
+  float: right;
+
+  &:hover,
+  &:active {
+    background: $wash;
+    color: $main;
+    border: 2px solid $main;
+    box-shadow: none;
+  }
+
+  @media(max-width: 768px) {
+    width: 100%;
   }
 }
